# traffic-forecasting-public

./: .env_public  .gitignore  README.md  main.py  pyproject.toml  tasks.py
configs/: stgformer_baseline.yaml  stgformer_baseline_bs100_short.yaml  stgformer_baseline_bs200.yaml  stgformer_baseline_bs200_exclude_missing.yaml  stgformer_baseline_bs200_short.yaml  stgformer_baseline_bs200_short_notod.yaml  stgformer_baseline_bs200_xavier.yaml  stgformer_baseline_dow.yaml  stgformer_cheb_tcn.yaml  stgformer_cheb_tcn_dow.yaml  stgformer_cheb_tcn_dow_exclude_missing_k16.yaml  stgformer_cheb_tcn_exclude_missing.yaml  stgformer_cheb_tcn_xavier.yaml  stgformer_cheb_tcn_xavier_dow.yaml  stgformer_cheb_tcn_xavier_dow_exclude_missing.yaml  stgformer_cheb_tcn_xavier_dow_exclude_missing_k16.yaml  stgformer_cheb_tcn_xavier_dow_exclude_missing_k16_full.yaml  stgformer_cheb_tcn_xavier_dow_exclude_missing_k16_no_graph.yaml  stgformer_cheb_tcn_xavier_dow_exclude_missing_k16_no_temporal.yaml  stgformer_cheb_tcn_xavier_dow_exclude_missing_k8.yaml  stgformer_cheb_tcn_xavier_dow_k16.yaml  stgformer_cheb_tcn_xavier_dow_pretrain_norm_impute.yaml  stgformer_cheb_tcn_xavier_dow_stage1only_norm_impute.yaml  stgformer_cheb_tcn_xavier_dow_stage2only_norm_impute.yaml  stgformer_cheb_tcn_xavier_exclude_missing_k16.yaml  stgformer_cheb_xavier_dow_exclude_missing_k16.yaml  stgformer_chebyshev.yaml  stgformer_depthwise.yaml  stgformer_geographic.yaml  stgformer_geographic_chebyshev.yaml  stgformer_hybrid.yaml  stgformer_hybrid_chebyshev.yaml  stgformer_mamba.yaml  stgformer_mamba2.yaml  stgformer_mamba_fast.yaml  stgformer_mlp.yaml  stgformer_pretrain.yaml  stgformer_pretrain_impute.yaml  stgformer_pretrain_impute_normalized.yaml  stgformer_pretrain_impute_normalized_lr0.0003.yaml  (+15 more)
(+71 files in other folders)
